allow overlay to be slightly wider to avoid horizontal scrollbars when possible

--- a/resourcesDS/wc/ds/css/ds.css
+++ b/resourcesDS/wc/ds/css/ds.css
@@ -47,8 +47,8 @@ body {
 	position: fixed;
 	top: 5%;
 	left: 50%;
-	margin-left: -500px;
-	width: 1000px;
+	margin-left: -512px;
+	width: 1024px;
 	height: 90%;
 	overflow: visible;
 	background-color: #EEE;
